Fix spotbugs warnings